<resources>
    <string name="app_name">Geo Hunt</string>
    <string name="title_activity_map">Geo Hunt Map</string>
    <string name="btn_checkDistance">Check</string>
    <string name="btn_HideClue">Hide Clue</string>
    <string name="txt_clueNumber">Placeholder</string>
    <string name="txt_clue">Placeholder</string>
    <string name="anim_tick">Tick Animation</string>
    <string name="anim_cross">Cross Animation</string>
    <string name="txt_NextClue">Next Clue</string>
</resources>
